--- a/css/master.css
+++ b/css/master.css
@@ -145,7 +145,7 @@ _____________________________________________________________________________*/
 
 .news_li_desc {
   color: #545454;
-  margin-left: 7%;
+  margin-left: 2.5rem;
 }
 
 .news_li_desc a {
